# FastAPI-MongoDB-Docker

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.web  Procfile  README.md  config.yaml  heroku.yml  main.py  models.py  mongo.yml  pyproject.toml  requirements.txt
app/: Procfile  models.py  requirements.txt  utils.py
app/database/: crud.py  db.py
app/routers/: authorization.py  files.py  site.py  users.py
app/static/: style.css
app/templates/: base.html  dashboard.html  home.html
database/: crud.py  db.py  schema.py
routers/: authorization.py  files.py  site.py  users.py
static/: style.css
templates/: dashboard.html  file_not_found.html
uploaded/: dummy.txt
