[tool.poetry]
name = "fastapi-mongodb-docker"
version = "0.1.0"
description = "Fastapi based cloud storage platform YourDrive"
authors = ["Tushar Singh <tusharvickey1999@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_mongodb_docker"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
aiofiles = "^22.1.0"
aiohttp = "^3.8.3"
uvicorn = "^0.20.0"
motor = {extras = ["srv"], version = "^3.1.1"}
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
